# buildroot

./: BUILD.gn  build_config.h
config/: BUILDCONFIG.gn
config/compiler/: BUILD.gn
toolchain/: gcc_toolchain.gni
toolchain/mac/: BUILD.gn
util/: cmake_target_template.gni  gn_to_cmake_script.py  gn_to_podspec_script.py
